# oligo

./: .gitignore  .readthedocs.yaml  CaptureOligos_WholeChromosome.py  Dockerfile  Dockerfile.dev  MakeShells.py  README.md  README.rst  STAR_density_v1-10.py  capture.py  config.txt  design.py  functional_tests.py  off_target.py  oligo.py  pyproject.toml  regions.py  tests.py  tiled.py  tools.py
.github/workflows/: docker-image.yml
CRISPR-OT/: OT_Graph.py  OT_OligoGen.py  OT_Pipe.sh  OT_STAR.py  README.md  StatsGen.py
Chromosome/: ChrPipe.sh  MakeShells.py  OligoBLAT.py  OligoGen.py  OligoGen_TriC.py  OligoMerge.sh  OligoSTAR.py  README.md  RunShells.sh  SplitFA.sh  WholeChrPipe.sh
Regions/: DepthGauge.pl  DepthGauge.py  DoubledFrag.py  FragExtract.py  MergeAssociation.py  OligoSTAR.py  README.md  RegionsPipe.sh
WholeChr/: CaptureOligos_WholeChromosome.py  OligoGen.py  OligoSTAR.py  QsubShells.sh  README.md  STAR_density_v1-10.py  SplitFA.sh  WholeChrPipe.sh  cat_OligoInfo.sh
WholeChr/hg19_chr16_HindIII_70bp/: Shell_1-20000.sh
docker/: Dfam.h5
docs/: Makefile  all-about-me.rst  capture.rst  capture_class.rst  classes.rst  conf.py  index.rst  off_target.rst  offtarget_class.rst  overview.rst  regions.rst  requirements.txt  tiled.rst  tiled_class.rst  tools.rst  tools_class.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: custom.css
src/oligo/: __main__.py  design.py  tools.py
tests/: functional_tests.py  tests.py
(+5 files in other folders)
